2006-02-13  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* bignum.tcl (rshift): Fixed [SF Tcllib Bug 1098051]. (Solution
	  provided by Lars Hellstrom. Added tests for both rshift and lshift)

2006-01-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bignum.tcl (testbit): Fixed [SF Tcllib Bug 1085562]. Thanks to
	  aubinroy <aroy@users.sf.net> for the report, bugfix, and his
	  patience while waiting for us to apply the fix.
	* bignum.test: Extended the testsuite.

2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bigfloat.test: Fixed use of duplicate test names.
	* calculus.test:
	* linalg.test:
	* statistics.test:

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bessel.test: More boilerplate simplified via use of test support.
	* bigfloat.test:
	* bigfloat2.test:
	* bignum.test:
	* calculus.test:
	* combinatorics.test:
	* constants.test:
	* elliptic.test:
	* fourier.test:
	* fuzzy.test:
	* geometry.test:
	* interpolate.test:
	* linalg.test:
	* math.test:
	* optimize.test:
	* polynomials.test:
	* qcomplex.test:
	* roman.test:
	* special.test:
	* statistics.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bessel.test: Hooked into the new common test support code.
	* bigfloat.test:
	* bigfloat2.test:
	* bignum.test:
	* calculus.test:
	* combinatorics.test:
	* constants.test:
	* elliptic.test:
	* fourier.test:
	* fuzzy.test:
	* geometry.test:
	* interpolate.test:
	* linalg.test:
	* math.test:
	* optimize.test:
	* polynomials.test:
	* qcomplex.test:
	* roman.test:
	* special.test:
	* statistics.test:

2006-01-11  Andreas Kupries <andreask@activestate.com>

	* fourier.tcl (::math::fourier::lowpass):  Changed package
	* fourier.tcl (::math::fourier::highpass): reference
	  "complexnumbers" to the correct "math::complexnumbers".

2006-01-10  Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * linalg.tcl: Fixed bug in procedure angle