@@ -495,7 +495,6 @@ foreach {z n} {
     } -result 0
 }
 
-
 # Bit operations (And, Or, Xor)
 
 foreach {n a b zand zor zxor} {
